@@ -1,6 +1,8 @@
 v4.4.0
-  * Fix lots of bugs by switching from deprecaetd oauth2client to
+  * Fix lots of bugs by switching from deprecated oauth2client to
     google_auth_oauthlib
+  * Handle encoding/decoding errors more gracefully by replacing with
+    placeholder chars instead of blowing up
   * Fix `--lineart` option failing with unicode errors
   * `quick` command now prompts for which calendar to use when ambiguous
   * Fix --nodeclined option failing on events with aliased email
